# URAK

./: .gitignore  README.md  unified_blog_api.py
docs/: blog-data.json
docs/authentic/: audit_logs.json  roles_permissions.json  security_config.json  users.json
docs/categories/arch/: 1.json  2.json
docs/categories/blockchain/: 1.json
docs/categories/frontend/: 1.json
docs/categories/life/: 1.json
docs/categories/research/: 1.json
docs/categories/tech/: 2.json  3.json
psx/: .env  .gitignore  README.md  create_admin.py  main.py  pyproject.toml
psx/alembic/: env.py
psx/app/: __init__.py  main.py
psx/app/api/: __init__.py  auth.py  backup.py  monitoring.py  user.py
psx/app/api/v1/: __init__.py  blog.py  health.py
psx/app/core/: backup.py  config.py  database.py  monitoring.py  security.py  thread_pool.py
psx/app/models/: blog.py  db_models.py  schemas.py  user.py
psx/app/services/: audit.py  auth.py  blog.py
psx/docs/: api_summary.md  blog-data.json
psx/scripts/: backup_manager.py  init_database.py
uiok/: .gitignore  package-lock.json  package.json
uiok/src/: middleware.ts
uiok/src/app/: globals.css  layout.tsx
uiok/src/app/admin/: page.tsx
uiok/src/app/api/auth/csrf/: route.ts
uiok/src/app/api/auth/login/: route.ts
uiok/src/app/api/auth/logout/: route.ts
uiok/src/app/api/auth/register/: route.ts
uiok/src/app/api/auth/validate/: route.ts
uiok/src/app/dashboard/: page.tsx
uiok/src/app/login/: page.tsx
uiok/src/app/register/: page.tsx
uiok/src/components/layout/: protected-layout.tsx
uiok/src/components/providers/: auth-provider.tsx
uiok/src/config/: validation.ts
uiok/src/lib/: store.ts
uiok/src/lib/features/app/: appSlice.ts
uiok/src/lib/hooks/: redux.ts
uiok/src/store/: hooks.ts
uiok/src/store/slices/: authSlice.ts
uiok/src/utils/: validation.ts
