[project]
name = "psx"
version = "0.1.0"
description = "URAK Blog API Backend Service"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "psutil>=5.9.0",
    "httptools>=0.6.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "asyncmy>=0.2.9",
    # Security and Authentication
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    # Rate limiting and security
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    # Logging and monitoring
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    # Database security and monitoring
    "sqlalchemy-utils>=0.41.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true
